apps/base/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
spec:
  ports:
    - port: 3000
  selector:
    app: homepage
  type: ClusterIP
