apps/base/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
  name: homepage-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: homepage.test104.pl
    http:
      paths:
      - backend:
          service:
            name: homepage
            port:
              number: 3000
        path: /
        pathType: Prefix
